# CodeSage

./: .gitignore
codesage/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
codesage/agents/: coder.py  context_retriever.py  graph.py  intent_parser.py  planner.py  self_corrector.py  state.py
codesage/api/: main.py  models.py
codesage/api/routes/: index.py  search.py  tasks.py
codesage/eval/: benchmark.py  metrics.py
codesage/indexer/: __main__.py  chunker.py  embedder.py  parser.py  upserter.py  walker.py
codesage/tests/: test_agents.py  test_chunker.py  test_parser.py  test_tools.py
codesage/tools/: ast_tools.py  exec_tools.py  graph_tools.py  search.py
codesage/vscode-ext/: package-lock.json  package.json  tsconfig.json
codesage/vscode-ext/src/: extension.ts  hoverProvider.ts  searchProvider.ts
