[project]
name = "codesage"
version = "0.1.0"
description = "Autonomous multi-agent software engineering system"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "qdrant-client>=1.9.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "langchain-google-genai>=1.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "eval*", "indexer*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

